# Load_testing_TTS

./: README.md  locustfile.py  main.py  pyproject.toml  requirements.txt
app/: routes.py  tts_service.py  worker.py
