[project]
name = "tts-stress-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "locust>=2.43.3",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
